
plugins {
    id 'java'
}

group = 'com.lawrence'
version = '0.0.1-SNAPSHOT'
allprojects {
    ext {
        lombok = "org.projectlombok:lombok:1.18.18"
        hutool = "cn.hutool:hutool-all:4.6.5"
        slf4j = "org.slf4j:slf4j-simple:1.7.26"
    }
    apply { plugin('java') }
    repositories {
        mavenLocal()
        mavenCentral()
        maven { url('https://maven.aliyun.com/repository/public') }
        maven { url('https://maven.aliyun.com/repository/central') }
        maven { url('https://maven.aliyun.com/repository/google') }
        maven { url('https://maven.aliyun.com/repository/spring') }
    }
    sourceCompatibility = '11'
    targetCompatibility = '11'
    compileJava.options.encoding("UTF-8")
    dependencies {
        implementation "${hutool}"
        implementation "${slf4j}"
        compileOnly 'org.projectlombok:lombok:1.18.22'
        annotationProcessor 'org.projectlombok:lombok:1.18.22'
        implementation 'junit:junit:4.12'

        implementation 'javax.servlet:javax.servlet-api:3.0.1'
        implementation 'org.javassist:javassist:3.27.0-GA'
    }
}





